# adaptive_reasoning

./: .gitattributes  .gitignore  A32_MILESTONES.md  A33_MILESTONES.md  A34_MILESTONES.md  A35_MILESTONES.md  A36_MILESTONES.md  A37_MILESTONES.md  A38_MILESTONES.md  A39_MILESTONES.md  A40_MILESTONES.md  ARCHITECTURE.md  CONSOLIDATION_PLAN.md  HUD_MILESTONES.md  M1_MILESTONES.md  M2_MILESTONE.md  M3_MILESTONES.md  P1_MILESTONES.md  P2_MILESTONES.md  P3_MILESTONES.md  README.md  SAGE_MILESTONES.md  V5_PROPOSAL.md  abstraction_dataset_io.py  abstraction_labels.py  analyze_action3_safety.py  analyze_submit_context.py  build_abstraction_dataset.py  build_break_event_dataset.py  build_cognitive_trace_dataset.py  cognitive_taxonomy.py  compare_human_agent_global_states.py  compare_sampling_setups.py  dataset_analysis.py  discover_action_ontology.py  evaluate_generalization.py  extract_state_abstractions.py  game_splits.py  infer_action2_by_level.py  infer_action2_success_condition.py  (+21 more)
v4_1_reasoning_system/: README.md  __init__.py  pyproject.toml  setup.py
v4_1_reasoning_system/arc_agi/: __init__.py  actioner.py  associative_memory.py  dynamics_inducer.py  energy_scorer.py  game_memory.py  game_world_model.py  goal_decomposer.py  goal_pursuit.py  goal_recognizer.py  grid_analyzer.py  hypothesis_models.py  latent_task_programmer.py  llm_cache.py  reasoning_loop.py  runtime_bootstrap.py  state_describer.py  strategy_generator.py  strategy_router.py  trajectory_memory.py  trajectory_sampler.py  visual_cortex.py
v4_1_reasoning_system/memory/: __init__.py  replay.py  retrieval.py
(+1304 files in other folders)
