[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "v4_1_reasoning_system"
version = "0.1.0"
description = "Adaptive reasoning architecture: LLM parse → JEPA world model → EBM routing → solver execution → verification → memory"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name = "AGI Research"}]

dependencies = [
    "torch>=2.1.0",
    "transformers>=4.36.0",
    "accelerate>=0.25.0",
    "bitsandbytes>=0.41.0",
    "numpy>=1.24.0",
    "ortools>=9.7,<9.12",
    "faiss-cpu>=1.7.4",
    "pydantic>=2.5.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "ipykernel>=6.25.0",
    "jupyter>=1.0.0",
]
gpu = [
    "faiss-gpu>=1.7.4",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["v4_1_reasoning_system*"]
